--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>AcceptDead's AngularJS-Bootstrap Site</title>
+  <title>AngularJS-Bootstrap Site</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,15 +36,16 @@
                 <a class="brand" href="#">Site name</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <li class="active"><a href="#/INTRO">INTRO</a></li>
+                        <li class="active"><a href="#/home">Home</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#/Project_WAF">Project Web Application Firewall</a></li>
-                                <li><a href="#/Project_iGAMEv">Project iGAMEv.Com</a></li>
+                                <li><a href="#/project_a">Project A</a></li>
+                                <li><a href="#/project_b">Project B</a></li>
                             </ul>
                         </li>
                         <li><a href="#/contact">Contact</a></li>
+                        <li><a href="#/imprint">Inprint</a></li>
 
                     </ul>
                 </div><!--/.nav-collapse -->
