--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             </ul>
                         </li>
                         <li><a href="#/contact">Contact</a></li>
-// #                       <li><a href="#/imprint">Inprint</a></li>
+               <!--  <li><a href="#/imprint">Inprint</a></li> -->
 
                     </ul>
                 </div><!--/.nav-collapse -->
