--- a/index.html
+++ b/index.html
@@ -40,12 +40,11 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#/project_a">Web Application Firewall</a></li>
-                                <li><a href="#/project_b">Baas</a></li>
+                                <li><a href="#/project_1">Web Application Firewall</a></li>
+                                <li><a href="#/project_1">Baas</a></li>
                             </ul>
                         </li>
                         <li><a href="#/contact">Contact</a></li>
-               <!--  <li><a href="#/imprint">Inprint</a></li> -->
 
                     </ul>
                 </div><!--/.nav-collapse -->
