--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>DeadHead's Site [AnglarJS-Bootstrap]</title>
+  <title>DeadHead's Site</title>
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,15 +36,20 @@
                 <a class="brand" href="#">DeadHead</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <li class="active"><a href="#/intro">INTRO</a></li>
+                        <li class="active"><a href="#/INTRO">INTRO</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#/project_1">Web Application Firewall</a></li>
-                                <li><a href="#/project_2">Baas</a></li>
+<li><a href="#/Project_Server_Systems">Server_Systems</a></li>
+<li><a href="#/Project_Web_Vulnerability">Web Vulnerability</a></li>
+<li><a href="#/Project_Server_Incident"></a>Server_Incident</li>
+<li><a href="#/Project_Waf">Web Application Firewall</a></li>
+<li><a href="#/Project_GBaas">Game Engine [Baas&Cloud]</a></li>
+<li><a href="#/Project_GStatistic">Game Statistic [Baas&Cloud]</a></li>
+<li><a href="#/Project_PUSH">PUSH Notification [Baas&Cloud]</a></li>
                             </ul>
                         </li>
-                        <li><a href="#/contact">Contact</a></li>
+                        <li><a href="#/Contact">Contact</a></li>
 
                     </ul>
                 </div><!--/.nav-collapse -->
