--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                             <ul class="dropdown-menu">
 <li><a href="#/Project_Server_Systems">Server_Systems</a></li>
 <li><a href="#/Project_Web_Vulnerability">Web Vulnerability</a></li>
-<li><a href="#/Project_Server_Incident"></a>Server_Incident</li>
+<li><a href="#/Project_Server_Incident">Server_Incident</a></li>
 <li><a href="#/Project_Waf">Web Application Firewall</a></li>
 <li><a href="#/Project_GBaas">Game Engine [Baas&Cloud]</a></li>
 <li><a href="#/Project_GStatistic">Game Statistic [Baas&Cloud]</a></li>
