--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <a class="brand" href="#">DeadHead</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <li class="active"><a href="#/INTRO">INTRO</a></li>
+                        <li class="active"><a href="#/PROFILE">Profile</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                             <ul class="dropdown-menu">
