--- a/index.html
+++ b/index.html
@@ -33,10 +33,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#">DeadHead</a>
+                <a class="brand" href="#/Index">DeadHead</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <li class="active"><a href="#/PROFILE">Profile</a></li>
+                        <li class="active"><a href="#/INTRO"></a></li>
+                        <li><a href="#/Profile">Profile</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                             <ul class="dropdown-menu">
