--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <title>DeadHead's Site</title>
-
+  <title>AcceptDead's Site</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
@@ -33,11 +32,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#/Index">DeadHead</a>
+                <a class="brand" href="#/Index">AcceptDead</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-                        <li class="active"><a href="#/INTRO"></a></li>
-                        <li><a href="#/Profile">Profile</a></li>
+<li class="active"><a href="#/INTRO"></a></li>
+<li><a href="#/Profile">Profile</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                             <ul class="dropdown-menu">
