--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <a class="brand" href="#/Index">AcceptDead</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
-<li class="active"><a href="#/INTRO"></a></li>
+<li class="active"><a href="#/INTRO">INTRO</a></li>
 <li><a href="#/Profile">Profile</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
