--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
                             <ul class="dropdown-menu">
 
-<li><a href="#/Project_Server_Systems">Server_Systems</a></li>
+<li><a href="#/Project_Server_Systems">Server Systems</a></li>
 <li><a href="#/Project_Web_Vulnerability">Web Vulnerability</a></li>
-<li><a href="#/Project_Server_Incident">Server_Incident</a></li>
+<li><a href="#/Project_Server_Incident">Server Incident</a></li>
 <li><a href="#/Project_Waf">Web Application Firewall</a></li>
-<li><a href="#/Project_GBaas">Game Engine [Baas&Cloud]</a></li>
-<li><a href="#/Project_GStatistic">Game Statistic [Baas&Cloud]</a></li>
-<li><a href="#/Project_PUSH">PUSH Notification [Baas&Cloud]</a></li>
+<li><a href="#/Project_GBaas">Game Engine [Baas & Cloud]</a></li>
+<li><a href="#/Project_GStatistic">Game Statistic [Baas & Cloud]</a></li>
+<li><a href="#/Project_PUSH">PUSH Notification [Baas & Cloud]</a></li>
 
                             </ul>
                         </li>
