--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#/Index">AcceptDead</a>
+                <a class="brand" href="#/INTRO">AcceptDead</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
 <li class="active"><a href="#/INTRO">INTRO</a></li>
