--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </a>
-                <a class="brand" href="#/INDEX">AcceptDead</a>
+                <a class="brand" href="#/INTRO">AcceptDead</a>
                 <div class="nav-collapse collapse">
                     <ul class="nav">
+<li class="active"><a href="#/INTRO">INTRO</a></li>
 <li><a href="#/Profile">Profile</a></li>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Projects <b class="caret"></b></a>
@@ -83,53 +84,4 @@
     <script src="js/directives.js"></script>
 
 </body>
-
-
-
-
-
-
-<!-- Main hero unit for a primary marketing message or call to action -->
-<div class="hero-unit">
-    <h2>AcceptDead's Project Site<small>  AngularJS-Bootstrap Seed</small></h2>
-    <h3>Version <span app-version></span></h3>
-    <p>This web application template derives from the <a href="https://github.com/angular/angular-seed">angular-seed</a> project and
-    integrates
-    <ul>
-    <li><a href="http://angularjs.org">AngularJS</a>, </li>
-    <li><a href="http://twitter.github.com/bootstrap/getting-started.html#examples">twitter-bootstrap</a>,</li>
-    <li><a href="http://jquery.com/">jQuery</a> and</li>
-    <li>a simple PHP contact form.</li>
-    </ul>
-    Use it as a starting point to create your own website.</p>
-
-    <p><a href="#/Profile" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-</div>
-
-<!-- Example row of columns -->
-<div class="row">
-    <div class="span4">
-        <a href="#" class="thumbnail"><img src="img/screen1.jpg"  alt="screen1"></a>
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn" href="#/project_a">View details &raquo;</a></p>
-    </div>
-    <div class="span4">
-        <a href="#" class="thumbnail"><img src="img/screen2.jpg"  alt="screen2"></a>
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-        <p><a class="btn" href="#/project_a">View details &raquo;</a></p>
-    </div>
-    <div class="span4">
-        <a href="#" class="thumbnail"><img src="img/screen3.jpg"  alt="screen3"></a>
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn" href="#/contact">View details &raquo;</a></p>
-    </div>
-</div>
-
-
-
-
-
 </html>
